string deduplication example